@@ -786,7 +786,7 @@ public class Fetcher extends Configured implements Tool,
                       newUrl, refreshTime < Fetcher.PERM_REFRESH_TIME,
                       Fetcher.CONTENT_REDIR);
                   if (redirUrl != null) {
-                    queueRedirect(redirUrl, fit);
+                    fit = queueRedirect(redirUrl, fit);
                   }
                 }
                 break;
@@ -807,7 +807,7 @@ public class Fetcher extends Configured implements Tool,
                 Text redirUrl = handleRedirect(fit.url, fit.datum, urlString,
                     newUrl, temp, Fetcher.PROTOCOL_REDIR);
                 if (redirUrl != null) {
-                  queueRedirect(redirUrl, fit);
+                  fit = queueRedirect(redirUrl, fit);
                 } else {
                   // stop redirecting
                   redirecting = false;
@@ -946,7 +946,7 @@ public class Fetcher extends Configured implements Tool,
       }
     }
 
-    private void queueRedirect(Text redirUrl, FetchItem fit)
+    private FetchItem queueRedirect(Text redirUrl, FetchItem fit)
         throws ScoringFilterException {
       CrawlDatum newDatum = new CrawlDatum(CrawlDatum.STATUS_DB_UNFETCHED,
           fit.datum.getFetchInterval(), fit.datum.getScore());
@@ -967,6 +967,7 @@ public class Fetcher extends Configured implements Tool,
         reporter.incrCounter("FetcherStatus", "FetchItem.notCreated.redirect",
             1);
       }
+      return fit;
     }
 
     private void logError(Text url, String message) {
